@@ -540,7 +540,12 @@ int msDrawShadeSymbol(symbolSetObj *symbolset, imageObj *image, shapeObj *p, sty
                if(ret != MS_SUCCESS) goto cleanup;
             }
             width = (style->width <= 0)?scalefactor:style->width*scalefactor;
+            width = MS_MIN(width, style->maxwidth);
+            width = MS_MAX(width, style->minwidth);
             spacing = (style->size <= 0)?scalefactor:style->size*scalefactor;
+            spacing = (style->size <= 0)?scalefactor:style->size*scalefactor;
+            spacing = MS_MIN(spacing, style->size);
+            spacing = MS_MAX(spacing, style->size);
             ret = msHatchPolygon(image,offsetPolygon,spacing,width,style->angle, &style->color);
             goto cleanup;
          }
