@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk):
 ----------------------------
+- apply min/max size/width style values to polygon spacing (vaguely related to #3132)
+
 - assure that a created tile has a non-zero width and height (#3370)
 
 - use png_sig_cmp instead of png_check_sig (#3762)
